[project]
name = "hey-seven-agent"
version = "1.3.0"
description = "Property-aware conversational AI agent for casino resort Q&A"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestWarning:pytest_asyncio",
    "ignore::RuntimeWarning:asyncio",
]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=html:htmlcov"
markers = [
    "chaos: compound failure tests (run separately in CI: pytest -m chaos)",
    "load: concurrent load tests (run separately in CI: pytest -m load)",
    "slow: tests requiring >10s (skip in fast CI: pytest -m 'not slow')",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    # re2 paths are environment-dependent (requires libre2-dev)
    "import re2 as _re2",
    "RE2_AVAILABLE = True",
    "_re2\\.Options",
    "_re2\\.compile",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
